--- a/templates/ingresar_receta_dulce.html
+++ b/templates/ingresar_receta_dulce.html
@@ -160,7 +160,7 @@
                 <textarea id="descripcion" name="descripcion" required></textarea>
             </div>
             
-             <!-- Botones alineados: Guardar y Volver al Menú -->
+             <!-- Botones Guardar y Volver al Menú -->
             <div class="buttons">
                 <button type="submit">Guardar Receta</button>
                 <button type="button" onclick="window.location.href='{% url 'menu_principal' %}'">Volver al Menú</button>
