--- a/templates/about.html
+++ b/templates/about.html
@@ -66,7 +66,7 @@
         <!-- Imagen centrada -->
         <img src="https://media.licdn.com/dms/image/v2/C4E03AQEV6EFmHBFnQQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1638238886788?e=1733356800&v=beta&t=3VoYcrXFyBhK0em3o1GPlOnUVdQurlKlbOoSOBjSycI" alt="Marcelo Cid" class="profile-image">
 
-        <!-- Botón de LinkedIn con el mismo estilo -->
+        <!-- Botón de LinkedIn -->
         <div class="button-container">
             <a href="https://www.linkedin.com/in/marceloignaciocidabud/" target="_blank">Visita mi perfil de LinkedIn</a>
         </div>
