--- a/templates/ingresar_receta_salada.html
+++ b/templates/ingresar_receta_salada.html
@@ -159,13 +159,13 @@
                 <input type="date" id="fecha_subida" name="fecha_subida" required>
             </div>
 
-            <!-- Descripción (aquí se encuentra abajo de todos los otros campos) -->
+            <!-- Descripción -->
             <div class="descripcion-group">
                 <label for="descripcion">Descripción:</label>
                 <textarea id="descripcion" name="descripcion" required></textarea>
             </div>
 
-            <!-- Botones alineados: Guardar y Volver al Menú -->
+            <!-- Botones Guardar y Volver al Menú -->
             <div class="buttons">
                 <button type="submit">Guardar Receta</button>
                 <button type="button" onclick="window.location.href='{% url 'menu_principal' %}'">Volver al Menú</button>
